addeo daisy & navbar responsive

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,33 @@
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-  <button class="btn btn-circle">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg>
-  </button>
+  <header>
+    <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <label tabindex="0" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </label>
+            <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a>Home</a></li>
+              <li><a>Contactos</a></li>
+              <li><a>Transferencias</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost normal-case text-xl">Bornoz Bank</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal p-0">
+            <li><a>Home</a></li>
+            <li><a>Contactos</a></li>
+            <li><a>Transferencias</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn">Log In</a>
+          <a class="btn ml-2">Sign Up</a>
+        </div>
+      </div>
+  </header>
 </body>
 </html>
