navbar buttons / colors

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <div class="navbar bg-base-100">
+    <div class="navbar bg-lime-600 text-white">
         <div class="navbar-start">
           <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -29,8 +29,8 @@
           </ul>
         </div>
         <div class="navbar-end">
-          <a class="btn">Log In</a>
-          <a class="btn ml-2">Sign Up</a>
+          <a class="btn btn-outline text-white">Log In</a>
+          <a class="btn text-white bg-lime-300 border-none ml-2">Sign Up</a>
         </div>
       </div>
   </header>
