--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,12 @@
         </div>
       </div>
   </header>
+  <main class="container-fluid bg-white">
+    <div class="grid grid-rows-1 sm:grid-rows-2 grid-cols-1 sm:grid-cols-4 gap-6 p-10 text-white">
+      <div class="bg-lime-700 col-span-1 sm:col-span-2 row-span-1 sm:row-span-2 rounded-full"><div class="text-center text-base sm:text-xl py-2 px-4">Bornoz Bank</div></div>
+      <div class="col-span-2 text-center"><div class="bg-lime-400 text-base sm:text-xl py-2 px-4 w-fit rounded-full">¡Bienvenido!</div></div>
+      <div class="col-span-2 text-center"><div class="bg-lime-600 text-base sm:text-xl py-2 px-4 rounded-full"> ¿Qué esperás para abrir tu cuenta?</div></div>
+  </div>
+  </main>
 </body>
 </html>
