terminado login form

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   </header>
   <main class="container-fluid h-screen">
     <!--arranca login-->
-    <section class="bg-white mt-10 w-96 mx-auto rounded-xl">
+    <section class="bg-white mt-10 pb-12 w-96 mx-auto rounded-xl">
       <div id="welcome-card" class="text-black">
         <h2 class="text-green-400 text-center text-3xl pt-8">Bienvenido.</h2>
         <div class="form">
@@ -57,9 +57,10 @@
               <span class="label-text-alt"></span>
               <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
             </label>
-            <button class="btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar Sesion</button>
+            
           </div>
           <!--termina login password-->
+          <button class="w-80 mt-2 ml-8 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar Sesion</button>
         </div>
       </div>
     </section>
