cambio color inputs form login

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             <label class="label">
               <span class="label-text">Nombre de usuario</span>
             </label>
-            <input type="text" placeholder="ej. Pedrito845" class="input input-bordered w-full max-w-xs" />
+            <input type="text" placeholder="ej. John Doe" class="input input-bordered w-full max-w-xs bg-white" />
           </div>
           <!--termina login usuario-->
           <!--arranca login password-->
@@ -52,7 +52,7 @@
             <label class="label">
               <span class="label-text">Contraseña</span>
             </label>
-            <input type="text" placeholder="Escriba aqui" class="input input-bordered w-full max-w-xs" />
+            <input type="text" placeholder="Escriba aquí su contraseña" class="input input-bordered w-full max-w-xs bg-white" />
             <label class="label">
               <span class="label-text-alt"></span>
               <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
