--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +8,40 @@
   <title>Bornoz Bank</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap"
+    rel="stylesheet">
 </head>
+
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
   <header>
     <div class="navbar text-white">
-        <div class="navbar-start">
-          <div class="dropdown">
-            <label tabindex="0" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-            </label>
-            <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a>Home</a></li>
-              <li><a>Contactos</a></li>
-              <li><a>Transferencias</a></li>
-            </ul>
-          </div>
-          <a class="btn btn-ghost normal-case text-xl">Bornoz Bank</a>
-        </div>
-        <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal p-0">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </label>
+          <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
             <li><a>Home</a></li>
             <li><a>Contactos</a></li>
             <li><a>Transferencias</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <a class="btn text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2">Registrarse</a>
-        </div>
+        <a class="btn btn-ghost normal-case text-xl">Bornoz Bank</a>
       </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal p-0">
+          <li><a>Home</a></li>
+          <li><a>Contactos</a></li>
+          <li><a>Transferencias</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <a
+          class="btn text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2">Registrarse</a>
+      </div>
+    </div>
   </header>
   <main class="container-fluid h-screen">
     <!--arranca login-->
@@ -56,20 +62,24 @@
             <label class="label">
               <span class="label-text">Contraseña</span>
             </label>
-            <input type="text" placeholder="Escriba aquí su contraseña" class="input input-bordered w-full max-w-xs bg-white" />
+            <input type="text" placeholder="Escriba aquí su contraseña"
+              class="input input-bordered w-full max-w-xs bg-white" />
             <label class="label">
               <span class="label-text-alt"></span>
               <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
             </label>
-            
+
           </div>
           <!--termina login password-->
-          <button class="w-80 mt-2 ml-8 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar Sesion</button>
+          <button
+            class="w-80 mt-2 ml-8 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar
+            Sesion</button>
         </div>
       </div>
     </section>
     <!--termina login usuario-->
   </main>
-  
+
 </body>
+
 </html>
