add reme,mber me

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,10 @@
             <input type="text" placeholder="Escriba aquí su contraseña"
               class="input input-bordered w-full max-w-xs bg-white" />
             <label class="label">
-              <span class="label-text-alt"></span>
+              <span class="label-text-alt"><label class="label cursor-pointer">
+                <input type="checkbox" checked="checked" class="checkbox-xs checkbox-primary" />
+                <span class="label-text-alt ml-1">Recuerdame</span> 
+              </label></span>
               <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
             </label>
           </div>
