--- a/src/index.html
+++ b/src/index.html
@@ -47,14 +47,14 @@
     <!--arranca login-->
     <section class="bg-white mt-10 pb-12 w-10/12 sm:w-8/12 md:w-6/12 lg:w-4/12 xl:w-4/12 2xl:w-3/12 mx-auto rounded-xl shadow-lg">
       <div id="welcome-card" class="text-black">
-        <h2 class="text-green-400 text-center text-3xl pt-8">Bienvenido.</h2>
+        <h2 class="text-green-400 text-center text-3xl pt-8">¡Bienvenido!</h2>
         <div class="form flex flex-col items-center">
           <!--arranca login usuario-->
           <div class="form-control w-full max-w-xs mx-auto pt-4 px-4">
             <label class="label">
               <span class="label-text">Nombre de usuario</span>
             </label>
-            <input type="text" placeholder="ej. John Doe" class="input input-bordered w-full max-w-xs bg-white" />
+            <input type="text" placeholder="ej. JohnDoe" class="input input-bordered w-full max-w-xs bg-white" />
           </div>
           <!--termina login usuario-->
           <!--arranca login password-->
@@ -62,12 +62,12 @@
             <label class="label">
               <span class="label-text">Contraseña</span>
             </label>
-            <input type="text" placeholder="Escriba aquí su contraseña"
+            <input type="password" placeholder="Escriba aquí su contraseña"
               class="input input-bordered w-full max-w-xs bg-white" />
             <label class="label">
               <span class="label-text-alt"><label class="label cursor-pointer">
                 <input type="checkbox" checked="checked" class="checkbox-xs checkbox-primary" />
-                <span class="label-text-alt ml-1">Recuerdame</span> 
+                <span class="label-text-alt ml-1">Recuérdame</span> 
               </label></span>
               <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
             </label>
