--- a/src/index.html
+++ b/src/index.html
@@ -18,20 +18,20 @@
       <div class="navbar-start">
         <div class="dropdown">
           <label tabindex="0" class="btn btn-ghost lg:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
           </label>
-          <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a>Home</a></li>
-            <li><a>Contactos</a></li>
-            <li><a>Transferencias</a></li>
+          <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
+            <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
+            <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
+            <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Transferencias</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost normal-case text-xl hidden sm:flex ">Bornoz Bank</a>
       </div>
       <div class="navbar-center hidden lg:flex justify-center align-middle">
-        <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-lg shadow-lg">
+        <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
           <li><a class="active:bg-cyan-900">Home</a></li>
           <li><a class="active:bg-cyan-900">Contactos</a></li>
           <li><a class="active:bg-cyan-900">Transferencias</a></li>
@@ -39,7 +39,7 @@
       </div>
       <div class="navbar-end">
         <a
-          class="btn text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg">Registrarse</a>
+          class="btn font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</a>
       </div>
     </div>
   </header>
