add footer, starting dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
   </header>
   <main class="container-fluid h-screen">
     <!--arranca login-->
-    <section class="bg-white mt-10 pb-12 w-10/12 sm:w-8/12 md:w-6/12 lg:w-4/12 xl:w-4/12 2xl:w-3/12 mx-auto rounded-xl shadow-lg">
+    <section class="bg-white mt-10 pb-12 w-10/12 sm:w-8/12 md:w-6/12 lg:w-4/12 xl:w-4/12 2xl:w-3/12 mx-auto rounded-box shadow-lg">
       <div id="welcome-card" class="text-black">
         <h2 class="text-green-400 text-center text-3xl pt-8">¡Bienvenido!</h2>
         <div class="form flex flex-col items-center">
@@ -81,6 +81,18 @@
     </section>
     <!--termina login usuario-->
   </main>
+  <footer class="footer footer-center p-5 bg-base-100 text-white">
+    <div>
+      <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio Albornoz</span></p> 
+      <p>Copyright © 2022 - Todos los derechos Reservados</p>
+    </div> 
+    <div>
+      <div class="grid grid-flow-col gap-4">
+        <a href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-2xl"></i></a>
+        <a href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
