--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-gradient-to-b from-green-400 to-cyan-900 ">
@@ -49,13 +50,25 @@
       <!--termina navbar end-->
     </div>
   </header>
-  <main class="container-fluid h-screen">
+  <main class="container-fluid h-screen flex justify-center">
     <!--arranca dashboard-->
-    <section class="dashboard">
-
+    <section id="dashboard" class="mt-10 mb-10 p-10 w-11/12 bg-white rounded-box">
+      PAPAA
     </section>
     <!--termina dashboard-->
   </main>
+  <footer class="footer footer-center p-5 bg-base-100 text-white">
+    <div>
+      <p><span class="text-sm"> Desarrollado por:</span><br><span class="font-bold text-base">Patricio Albornoz</span></p> 
+      <p>Copyright © 2022 - Todos los derechos Reservados</p>
+    </div> 
+    <div>
+      <div class="grid grid-flow-col gap-4">
+        <a href="https://github.com/pato-1441" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-2xl"></i></a>
+        <a href="https://www.linkedin.com/in/patoalbornoz/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
