--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             <label class="label">
               <span class="label-text">Nombre de usuario</span>
             </label>
-            <input type="text" placeholder="ej. JohnDoe" class="input input-bordered w-full max-w-xs bg-white" />
+            <input type="text" placeholder="Escriba aquí su nombre de usuario" class="input input-bordered w-full max-w-xs bg-white" />
           </div>
           <!--termina login usuario-->
           <!--arranca login password-->
