--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,36 @@
         </ul>
       </div>
       <div class="navbar-end">
-        <a
-          class="btn font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</a>
+        <label for="my-modal-5" class="btn modal-button font-medium text-cyan-900 hover:text-white bg-white hover:border-cyan-900 border-cyan-900 hover:bg-cyan-900 border-none ml-2 shadow-lg rounded-box">Registrarse</label>
+        <input type="checkbox" id="my-modal-5" class="modal-toggle" />
+        <div class="modal">
+          <div class="modal-box w-11/12 sm:w-8/12 h-full max-w-5xl bg-white text-black flex flex-col">
+            <h2 class="text-green-400 text-center text-3xl pt-4 font-semibold">Bornoz Bank</h2>
+            <h2 class="text-gray-400 text-center text-2xl pt-4">Registrese aquí debajo gratis</h2>
+        <div class="form flex flex-col items-center">
+          <!--arranca register usuario-->
+          <div class="form-control w-full max-w-xs mx-auto pt-4 px-4">
+            <label class="label">
+              <span class="label-text">Nombre de usuario</span>
+            </label>
+            <input type="text" placeholder="Escriba aquí su nombre de usuario" class="input input-bordered w-full max-w-xs bg-white" />
+          </div>
+          <!--termina register usuario-->
+          <!--arranca register password-->
+          <div class="form-control w-full max-w-xs mx-auto px-4">
+            <label class="label">
+              <span class="label-text">Contraseña</span>
+            </label>
+            <input type="password" placeholder="Escriba aquí su contraseña"
+              class="input input-bordered w-full max-w-xs bg-white" />
+          </div>
+          <!--termina register password-->          
+        </div>
+            <div class="modal-action justify-center">
+              <label for="my-modal-5" class="btn w-1/3 mt-2 btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Registrarse</label>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </header>
